# workshop_mcp_litellm

./: README.md  architecture_graph.ipynb  genpilot_mcp_architecture_updated  pyproject.toml
crewai-with-mcp/: client.py  main.py  server.py
crewai-with-mcp.run/src/mcpwhs/: __init__.py  crew.py  main.py
crewai-with-mcp/src/mcpwhs/: crew.py  main.py
crewai_tools/: pyproject.toml
crewai_tools/src/crewai_tools/: __init__.py  crew.py  main.py  tools.py
crewai_tools/src/crewai_tools/config/: agents.yaml  tasks.yaml
crewai_tools/src/mcp_research/: __init__.py  crew.py  main.py
crewai_tools/src/mcp_research/config/: tasks.yaml
dspyagent/: __init__.py  agent.py  chat.py  interface.py
genpilot/: __init__.py
genpilot/abc/: agent.py  chat.py  mcp_agent.py  mcp_chat.py  memory.py
genpilot/agent/: __init__.py  default_agent.py
genpilot/chat/: __init__.py  chainlit_chat.py  streamlit_chat.py  terminal_chat.py
genpilot/mcp/: config.py  manager.py  server.py
genpilot/memory/: __init__.py  buffer_memory.py
genpilot/tools/: code_executor.py  kubectl_executor.py  mcp_toolkit.py  tool_validator.py
genpilot/utils/: format.py  function_to_schema.py  mcp_server_config.py
langchain-with-mcp/: client.py  server.py
samples/acm/: advisor.py  engineer.py  kind-cluster-access.md  planner.py
samples/acm/acmdspy/: Untitled.ipynb  advisor.py  engineer.py  kind-cluster-options.yaml  planner.py  prompt.py  singnature.py
samples/acm/globalhub/: cluster-options.yaml  global_hub_agent.py  kafka_conn.py  kube_client.py  (+1 more)
samples/assistant/: serper.py  terminal.py
samples/github/: agent.py
samples/mcp/: README.md  agent.py  assistant-server-config.json  assistant.py  client.py
samples/travel/: chainlit_agent.py  streamlit_agent.py  terminal_agent.py
(+12 files in other folders)
