[project]
name = "genpilot"
version = "0.1.5"
description = "GenPilot streamlines the creation of multi-agent systems powered by Generative AI. Adhering to the Model Context Protocol (MCP), it ensures seamless integration with MCP servers through an intuitive terminal or web interface"
authors = [{ name = "myan", email = "myan@redhat.com" }]
readme = "README.md"
requires-python = "<4.0,>=3.10"
dependencies = [
  "rich (>=13.9.4,<14.0.0)",
  "streamlit (>=1.42.2,<2.0.0)",
  "litellm (>=1.61.13,<2.0.0)",
  "textual (>=2.1.1,<3.0.0)",
  "chainlit (>=2.2.1,<3.0.0)",
  "mcp (>=1.3.0,<2.0.0)",
  "commentjson (>=0.9.0,<0.10.0)",
  "openai-agents (>=0.0.4,<0.0.5)",
]
keywords = ["agent", "MCP", "chat", "ai", "UI"]
license = "MIT"


[tool.poetry]
packages = [{ include = "genpilot" }]
exclude = ["tests/*", "samples/*"]

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
plotext = "^5.3.2"
plotly = "^6.0.0"
terminalplot = "^0.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[project.urls]
repository = "https://github.com/yanmxa/genpilot"
